# dog-tracker

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  App.test.js  app.css
frontend/src/lib/: Calendar.svelte  Calendar.test.js  DayDetail.svelte  DayDetail.test.js  Today.svelte  Today.test.js  api.js  api.test.js
src/: feeding.rs  handlers.rs  lib.rs  main.rs  migration.rs  treat.rs
tests/: api.rs
